Continue watching button and saving current position

--- a/JetStreamCompose/jetstream/src/main/res/values/strings.xml
+++ b/JetStreamCompose/jetstream/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@ https://www.apache.org/licenses/LICENSE-2.0
     <string name="screenplay">Screenplay</string>
     <string name="music">Music</string>
     <string name="watch_trailer">Watch trailer</string>
+    <string name="continue_watching">Continue Watching</string>
     <string name="status">Status</string>
     <string name="original_language">Original Language</string>
     <string name="budget">Budget</string>
